--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_Br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,23 +9,30 @@
     <script src="js/scripts.js" defer></script>
     <title>Projeto Quizz</title>
 </head>
+
 <body>
     <h1 id="main-title">Quizz de Programação</h1>
-    <div id="score-container">
+    <div id="score-container" class="hide">
+        <h2>Parabéns</h2>
         <p id="display-score"><span>90</span>%</p>
-        <p>Você acertou <span id="correct-answer">0</span> de <span id="questions-qtd"> 10 </span>perguntas</p>
+        <p>Você acertou <span id="correct-answer">0</span> de <span id="question-qty"> 10</span> perguntas</p>
         <button id="restart">Refazer quizz!</button>
     </div>
     <div id="quizz-container">
         <p id="question">
-            <span id="question-number">1</span> - <span id="question-text">Qual é a unidade de medida para metros?</span>
+            <span id="question-number">1</span> - <span id="question-text">Qual é a unidade de medida parametros?</span>
         </p>
         <div id="answers-box">
-            <button><span id="btn-letter">a</span><span id="question-answer">m</span></button>
-            <button><span id="btn-letter">b</span><span id="question-answer">km</span></button>
-            <button><span id="btn-letter">c</span><span id="question-answer">ms</span></button>
-            <button><span id="btn-letter">d</span><span id="question-answer">tm</span></button>
+            <button><span class="btn-letter">a</span><span class="question-answer">m</span></button>
+            <button><span class="btn-letter">b</span><span class="question-answer">km</span></button>
+            <button><span class="btn-letter">c</span><span class="question-answer">ms</span></button>
+            <button><span class="btn-letter">d</span><span class="question-answer">tm</span></button>
         </div>
     </div>
+
+
+    <button class="answer-template hide"><span class="btn-letter">a</span><span
+            class="question-answer">m</span></button>
 </body>
+
 </html>
